# TraceCore

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py  control.py  documents.py  feedback.py  health.py  queries.py  ui.py
app/core/: config.py  deps.py  security.py
app/db/: models.py  session.py
app/ml/: scorer.py
app/schemas/: auth.py  decision.py  feedback.py
app/services/: auth_service.py  cache.py  document_service.py  evaluation.py  llm.py  query_service.py  runtime_control.py  tool_registry.py
app/static/: app.js  index.html  styles.css
app/workflows/: decision_graph.py
tests/: conftest.py  test_auth.py  test_query_flow.py  test_runtime_control.py  test_scorer.py  test_ui.py
